fix: icon alignment on file page

--- a/src/renderer/scss/component/_button.scss
+++ b/src/renderer/scss/component/_button.scss
@@ -17,7 +17,7 @@
       stroke-opacity: 1;
       width: 1.4rem;
       height: 1.4rem;
-      top: 0;
+      top: 0.1em;
     }
   }
 
