--- a/src/renderer/scss/component/_form-field.scss
+++ b/src/renderer/scss/component/_form-field.scss
@@ -9,7 +9,7 @@ input[type='number'] {
 input[type='text'],
 input[type='number'],
 select {
-  padding-bottom: 0.2em;
+  padding-bottom: 0.1em;
 
   [data-mode='dark'] & {
     &::placeholder {
